# different-python

./: pyproject.toml
lesson_001/: 03_three_commits.txt
lesson_001/red_hat/: 01_jorney_begin.txt  03_murder.txt
lesson_002/: 00_distance.py  01_circle.py  02_operations.py  03_favorite_movies.py  04_my_family.py  05_zoo.py  06_songs_list.py  07_secret.py  08_garden.py  09_shopping.py  10_store.py
lesson_003/: 00_bubbles.py  01_days_in_month.py  02_envelop.py  03_division.py  04_student.py  05_store.py  06_rainbow.py  07_wall.py  08_smile.py
lesson_004/: 04_fractal.py  05_snowfall.py
lesson_004/practice/: 01_triangle.py
lesson_005/: 01_inhabitants.py  02_district.py  03_burger.py  03_my_module.py  my_burger.py  my_module.py
lesson_005/python_snippets/: module_1.py  module_2.py  module_3.py
lesson_006/: 01_mastermind.py  mastermind_engine.py
lesson_006/python_snippets/: my_nim_engine.py  nim.py
lesson_007/: 02_alchemy.py  03_man_ans_cat.py
lesson_007/python_snippets/: 03_self_param.py  04_special_methods.py  Bives_Buthead.py
lesson_008/: family_home_work.py  probe.py
lesson_008/python_snippets/: 02_parent_attrs.py  07_practice.py
lesson_009/: .gitignore  02_log_parser.py  03_files_arrange.py
lesson_009/python_snippets/: pushkin_cp1251.txt
lesson_010/: 01_fifth_element.py  02_groundhog_day.py  03_registration_log.py
lesson_011/: 02_prime_numbers.py  03_log_parser.py  04_error_log_decorator.py  events-.txt  result.txt  test.py
lesson_012/: 01_volatility.py  02_volatility_with_threads.py  03_volatility_with_processes.py
lesson_014/: score.py
(+19 files in other folders)
