[tool.poetry]
name = "shandrin-hub"
version = "0.1.0"
description = ""
authors = ["anton <sparco114@ya.ru>"]
readme = "README.md"
packages = [{include = "shandrin_hub"}]

[tool.poetry.dependencies]
python = "^3.10"
simple-draw = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
